--- a/src/components/ListItem.css
+++ b/src/components/ListItem.css
@@ -1,10 +1,14 @@
-.video-item{
+.list-item{
     display: flex !important;
     align-items: center;
     cursor: pointer;
+    padding: auto;
+}
+.list-item:hover{
+    transform: scale(1.04);
 }
 
-.video-item.item img{  
+.list-item.item img{  
 max-width: 150px;
 }
 
